fixes bug on mobile devices

--- a/src/components/message.css
+++ b/src/components/message.css
@@ -4,7 +4,8 @@
     margin: 8px 0;
     padding: 8px;
     border: 1px solid rgb(232, 234, 228);
-    width: 45%;
+    width: 55%;
+    word-break: break-word;
 }
 
 .message--self {
